<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tetris</string>
    <string name="play_button">Play</string>
    <string name="pause_button">Pause</string>
    <string name="end_button">End</string>
    <string name="exit_button">Exit</string>
    <string name="play_again_button">Play again!</string>
    <string name="score_text">Score: %1$d</string>
    <string name="move_right_button">Right</string>
    <string name="move_left_button">Left</string>
    <string name="rotate_button">Rotate</string>
</resources>